# Proyecto3_GC

./: Cargo.toml  README.md
src/: camera.rs  color.rs  framebuffer.rs  main.rs  material.rs  ray_intersect.rs  shaders.rs  skybox.rs  triangle.rs
